# geti

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_GETI.md  LICENSE  Makefile  Makefile.build  Makefile.shared  Makefile.shared-go  Makefile.shared-python  Makefile.shared-python-uv  README.md  docker-compose.yaml  third-party-images.txt  third-party-programs.txt
grpc_interfaces/: .dockerignore  Makefile  pyproject.toml
grpc_interfaces/grpc_interfaces/account_service/: client.py  common.proto  enums.py  membership_status.proto  organization.proto  organization_status.proto  personal_access_token.proto  user.proto  user_common.proto  user_settings.proto  workspace.proto
grpc_interfaces/grpc_interfaces/account_service/go/: go.mod  pat_client.go  users_client.go  utils.go
grpc_interfaces/grpc_interfaces/account_service/pb/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  membership_status_pb2.py  membership_status_pb2_grpc.py  organization_pb2.py  organization_pb2.pyi  organization_pb2_grpc.py  organization_status_pb2.py  organization_status_pb2.pyi  organization_status_pb2_grpc.py  personal_access_token_pb2.py  personal_access_token_pb2.pyi  personal_access_token_pb2_grpc.py  user_common_pb2.py  user_common_pb2.pyi  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_settings_pb2.py  user_settings_pb2.pyi  user_settings_pb2_grpc.py  user_status_pb2.py  user_status_pb2.pyi  user_status_pb2_grpc.py  workspace_pb2.py  workspace_pb2.pyi  workspace_pb2_grpc.py
grpc_interfaces/grpc_interfaces/account_service/responses/: user_by_id_response.py
grpc_interfaces/grpc_interfaces/credit_system/: __init__.py  client.py  credit_system_service.proto
grpc_interfaces/grpc_interfaces/credit_system/go/: go.mod  quotas_client.go
grpc_interfaces/grpc_interfaces/credit_system/pb/: __init__.py  credit_system_service_pb2.py  credit_system_service_pb2.pyi  credit_system_service_pb2_grpc.py
grpc_interfaces/grpc_interfaces/job_submission/: client.py  job_service.proto
grpc_interfaces/grpc_interfaces/job_submission/pb/: job_service_pb2.py  job_service_pb2.pyi  job_service_pb2_grpc.py
grpc_interfaces/grpc_interfaces/job_update/: __init__.py  client.py  job_update_service.proto
grpc_interfaces/grpc_interfaces/job_update/pb/: job_update_service_pb2.py  job_update_service_pb2.pyi  job_update_service_pb2_grpc.py
grpc_interfaces/grpc_interfaces/model_mesh/: mmesh.proto
grpc_interfaces/grpc_interfaces/model_registration/: client.py  service.proto
grpc_interfaces/grpc_interfaces/model_registration/pb/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
grpc_interfaces/grpc_interfaces/predict/: README.md
grpc_interfaces/tests/unit/account_service/: test_account_service_client.py
grpc_interfaces/tests/unit/credit_system/: test_client.py
grpc_interfaces/tests/unit/job_update/: test_client.py
grpc_interfaces/tests/unit/model_registration/: __init__.py  test_client.py
interactive_ai/data_migration/: .dockerignore  Makefile  pyproject.toml
interactive_ai/data_migration/migration/changelog/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  (+12 more)
interactive_ai/data_migration/tests/: conftest.py  test_image_size_as_integer.py
interactive_ai/libs/iai_core_py/: .dockerignore  pyproject.toml
interactive_ai/libs/media_utils/: .dockerignore  pyproject.toml
interactive_ai/migration_job/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
interactive_ai/migration_job/chart/: Chart.yaml  Chart.yaml.template  values.yaml
interactive_ai/migration_job/migration_job/: create_s3_bucket.py  mongodb_create_service_user.py  mongodb_upgrades_history.py  run_migration.py  utils.py
interactive_ai/migration_job/tests/: conftest.py
interactive_ai/services/auto_train/: Dockerfile  Makefile  pyproject.toml
interactive_ai/services/dataset_ie/: Dockerfile  Makefile  pyproject.toml
interactive_ai/services/director/: Dockerfile  Makefile  pyproject.toml
interactive_ai/services/jobs/: .dockerignore  Dockerfile  Makefile  pyproject.toml
interactive_ai/services/mlflow_geti_store/: .dockerignore  Dockerfile  Makefile  pyproject.toml
interactive_ai/services/model_registration/: Dockerfile  Makefile  pyproject.toml
interactive_ai/services/resource/: Dockerfile  Makefile  pyproject.toml
interactive_ai/services/visual_prompt/: Dockerfile  Makefile  pyproject.toml
interactive_ai/supported_models/: Makefile  pyproject.toml
interactive_ai/supported_models/geti_supported_models/: hyperparameters.py  model_manifest.py  parser.py
interactive_ai/supported_models/manifests/: base.yaml
interactive_ai/supported_models/tests/: dummy_model_manifest.yaml  test_model_manifest.py
interactive_ai/tests/e2e/: .gitignore  Makefile  README.md  get_geti_pat.py  pyproject.toml  requirements.txt
libs/fastapi_tools/: pyproject.toml
libs/fastapi_tools/tests/: test_dependencies.py  test_validation.py
libs/k8s_tools/: pyproject.toml
libs/spicedb_tools/: Makefile  pyproject.toml
libs/spicedb_tools/tests/: test_spicedb.py
libs/telemetry_tools/: pyproject.toml
libs/telemetry_tools/tests/: conftest.py
libs/types/: .gitignore  pyproject.toml
libs/types/tests/: test_id.py  test_media_identifier.py  test_session.py  test_singleton.py
platform/libs/users_handler/: .dockerignore  Makefile  pyproject.toml
platform/services/geti_controller/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
platform/services/install_upgrade/: Dockerfile  Makefile  geti-manifest.yaml.template  pyproject.toml
platform/services/installer/: Dockerfile  Makefile  pyproject.toml
platform/services/notifier/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  readme.md
platform/services/onboarding/: .dockerignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
platform/services/user_directory/: Dockerfile  Makefile  pyproject.toml
platform/services/weights_uploader/: Dockerfile  Dockerfile.old  Makefile  pyproject.toml
(+7629 files in other folders)
