[project]
name = "geti-fastapi-tools"
version = "1.0.0"
description = "FastAPI-related utilities for Intel Geti"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastapi~=0.115",
    "PyJWT~=2.10",
    "geti-types",
]

[tool.uv.sources]
geti-types = { path = "../types", editable = true }

[project.optional-dependencies]
bson = ["bson>=0.5.8"]

[dependency-groups]
dev = [
    "geti-fastapi-tools[bson]",
    "mypy~=1.15",
    "pre-commit~=4.1",
    "pytest~=8.3",
    "ruff~=0.11",
    "types-PyYAML~=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geti_fastapi_tools"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"
]
ignore = [
    "N801", "N805", "N806", "N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001", "RUF012"
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 7

[[tool.mypy.overrides]]
module = ["bson.*"]
follow_untyped_imports = true
