[project]
name = "geti-spicedb-tools"
version = "1.0.1"
description = "SpiceDB tools for Intel Geti"
requires-python = ">=3.10, <3.11"
dependencies = ["authzed~=0.13.0","cryptography~=44.0"]

[dependency-groups]
dev = ["pytest~=8.3", "mypy~=1.15", "ruff~=0.11", "pre-commit~=4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geti_spicedb_tools"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"
]
ignore = [
    "N801", "N805", "N806", "N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001", "RUF012"
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 7

[[tool.mypy.overrides]]
module = "authzed.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geti_spicedb_tools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grpcutil.*"
ignore_missing_imports = true
