[project]
name = "iai-core-py"
version = "1.0.0"
description = "Core Python library for Geti"
requires-python = ">=3.10, <3.14"

dependencies = [
    "attrs~=24.3",
    "cachetools~=5.5",
    "minio~=7.1.0",
    "networkx>=2.6,<=2.8",
    "numpy>=1.23.1,<=1.26.4",
    "omegaconf~=2.3",
    "opencv-python-headless~=4.10",
    "pycountry==22.3.*",
    "pymongo[aws]~=4.10",
    "scipy~=1.14",
    "shapely~=2.0",
    "urllib3>=1.26",
    "geti-types",
    "geti-feature-tools",
]

[tool.uv.sources]
geti-types = { path = "../../../libs/types", editable = true }
geti-feature-tools = { path = "../../../libs/feature_tools", editable = true }

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff~=0.11",
    "pre-commit~=4.1",
    "testfixtures~=7.2",
    "requests~=2.32",
    "pytest-freezegun",
    "mypy~=1.15",
    "types-cachetools",
    "types-PyYAML",
    "types-requests",
    "testcontainers[mongodb]~=4.9",
]

[build-system]
requires = [
    "numpy~=1.26",
    "hatchling"
]

build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iai_core_py"]


[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [".venv*"]


[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012", "RUF046", "PLW1508"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "ARG", "SIM", "RUF", "TC", "PL", "C90", "D103", "RET504"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-local-folder = ["geti_types", "geti_feature_tools"]

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
