[project]
name = "auto-train"
version = "1.0.0"
description = "Auto train service for Geti"
requires-python = ">=3.10, <3.14"

dependencies = [
    "geti-telemetry-tools[telemetry,logger,grpc]",
    "geti-types",
    "iai_core",
    "grpc_interfaces[job_submission]"
]

[tool.uv.sources]
geti-types = { path = "../../../libs/types", editable = true }
geti-telemetry-tools = { path = "../../../libs/telemetry_tools", editable = true }
iai_core = { path = "../../libs/iai_core_py", editable = true }
grpc_interfaces = { path = "../../../grpc_interfaces", editable = true }

[dependency-groups]
dev = ["pytest~=8.3", "ruff~=0.11", "pre-commit~=4.1", "mypy~=1.15", "testcontainers[mongodb]~=4.9", "pytest-freezegun"]

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [".venv*"]

src = ["app"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-local-folder = ["geti_types", "geti_telemetry_tools", "grpc_interfaces", "iai_core"]

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
