[project]
name = "jobs-scheduler"
version = "1.0.0"
description = "Jobs scheduler for Geti"
requires-python = ">=3.10, <3.14"

dependencies = [
    "flytekit==1.10.2",
    "fastapi==0.115.2",
    "uvicorn~=0.27",
    "marshmallow-enum==1.5.1",
    "geti-telemetry-tools[telemetry,fastapi,logger,kafka,grpc]",
    "geti-kafka-tools",
    "geti-spicedb-tools",
    "geti-k8s-tools",
    "geti-fastapi-tools",
    "geti-types",
    "sc_sdk",
    "grpc_interfaces[job_submission]"
]

[tool.uv.sources]
geti-types = { path = "../../../libs/types", editable = true }
geti-telemetry-tools = { path = "../../../libs/telemetry_tools", editable = true }
geti-kafka-tools = { path = "../../../libs/kafka_tools", editable = true }
geti-spicedb-tools = { path = "../../../libs/spicedb_tools", editable = true }
geti-k8s-tools = { path = "../../../libs/k8s_tools", editable = true }
geti-fastapi-tools = { path = "../../../libs/fastapi_tools", editable = true }
sc_sdk = { path = "../../libs/sc_sdk", editable = true }
grpc_interfaces = { path = "../../../grpc_interfaces", editable = true }

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff~=0.11",
    "pre-commit~=4.1",
    "mypy~=1.15",
    "httpx~=0.23",
    "testfixtures~=8.0",
    "pytest-freezegun==0.4.2",
    "types-cachetools",
    "types-PyYAML",
    "grpc-stubs~=1.53.0.5"
]

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [".venv*"]

src = ["app"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012", "PLW1508"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-local-folder = ["geti_types", "geti_spicedb_tools", "geti_kafka_tools", "geti_telemetry_tools", "geti_fastapi_tools", "grpc_interfaces", "sc_sdk"]

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
