[project]
name = "model-registration"
version = "1.0.0"
description = "Model registration service for Geti"
requires-python = ">=3.10, <3.14"

dependencies = [
    "openvino_model_api==0.3.0.2",
    "defusedxml==0.7.1",
    "moto==5.0.2",
    "asynctest==0.13.0",
    "asyncio==3.4.3",
    "aiofiles==24.1.0",
    "dpath==2.0.1",
    "kubernetes_asyncio==29.0.0",
    "httpx~=0.26",
    "grpc_interfaces[model_registration]"
]

[tool.uv.sources]
grpc_interfaces = { path = "../../../libs/grpc_interfaces", editable = true }

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff~=0.11",
    "pre-commit~=4.1",
    "mypy~=1.15",
    "pytest-asyncio==0.20.3",
    "pytest-aiohttp==1.0.5",
    "pytest-mock==3.12.0",
    "pytest-env==0.6.2",
    "pytest-forked==1.3.0",
    "types-aiofiles==24.1.0.20240626",
    "types-PyYAML==6.0.12.6", ]

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [".venv*"]

src = ["app"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805", "N806", "N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001", "RUF012"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true