[project]
name = "e2e-bdd"
version = "1.0.0"
description = "E2E BDD tests for Geti"
requires-python = ">=3.10, <3.11"

dependencies = [
    "behave~=1.2.7.dev6",
    "requests~=2.32",
    "numpy==1.26.4",
    "opencv-python-headless~=4.11",
    "pillow~=11.1.0",
    "urllib3~=2.3.0",
    "geti_client"
]

[dependency-groups]
dev = [
    "ruff~=0.11",
    "pre-commit~=4.1",
    "mypy~=1.15",
    "types-requests"
]

[tool.uv.sources]
geti_client = { path = "rest_client", editable = true }

[tool.ruff]
target-version = "py310"
line-length = 120

exclude = [".venv*"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012", "RUF046", "PLW1508", "S101", "D103", "ANN001", "ANN201", "S311", "PLW2901"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "ARG", "SIM", "RUF", "TC", "PL", "C90", "D103", "RET504"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
